BNF-1195 Add z-index property for IE11 tab failing to  display issue

--- a/gatsby/src/components/SiteDistinction/SiteDistinction.module.scss
+++ b/gatsby/src/components/SiteDistinction/SiteDistinction.module.scss
@@ -112,6 +112,7 @@
   &.otherSiteTabExpanded {
     opacity: 1;
     transform: translateY(0);
+    z-index: 1; // So tab appears on IE11
   }
 }
 
